Add principal CRUD to the Tasks

--- a/TaskApi/appsettings.json
+++ b/TaskApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SQLServerConnection": "Data Source=localhost;Initial Catalog=AdminTareasDb;User Id = sa; Password=TheRev417$"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
